User – Profile desktop done

--- a/themes/socialasset/assets/css/_commons.css
+++ b/themes/socialasset/assets/css/_commons.css
@@ -222,19 +222,19 @@ form .btn-default:focus,
 form .bootstrap-select .dropdown-toggle:focus{
 	outline: 0!important;
 }
-form  .dropdown-menu{
+form .dropdown-menu{
     margin: 0;
-    background-color: #cabb9f;
+    background-color: #ccc;
     border: none;
     border-radius: 0;
     box-shadow: none;
     padding: 12px 0 10px;
 }
-form  .dropdown-menu li{
+form .dropdown-menu li{
     position: relative;
     margin-bottom: 6px;
 }
-form  .dropdown-menu li a{
+form .dropdown-menu li a{
 	padding-top: 6px;
 	color: #fff;
 }
