--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -1,5 +1,6 @@
 .hm-banner-slider-sec{
 	overflow: hidden;
+	position: relative;
 }
 .hm-banner-slider-item{
 	background-position: center center!important;
@@ -188,10 +189,6 @@
 	background: #fff;
 	color: #0055FF;
 }
-
-
-
-
 span.hm-wc-social-assets-top-shape {
     position: absolute;
     left: 0;
@@ -203,22 +200,65 @@ span.hm-wc-social-assets-top-shape {
     background: url(../images/hm-wc-social-assets-top-shape-1.png);
     background-repeat: repeat-x;
 }
+.hm-user-support-inner{
+	background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center center !important;
+	min-height: 405px;
+	position: relative;
+}
+.hm-user-support-rgt-des{
+	position: absolute;
+    top: 50px;
+	right: 20px;
+    bottom: 50px;
+	background: #0055FF;
+	opacity: .92;
+	max-width: 400px;
+	width: 100%;
+    padding: 72px 70px 50px 90px;
+    border-radius: 6px;
+	color: #fff;
+}
+.hm-user-support-rgt-des h3{
+	margin-bottom: 15px;
+	font-weight: 500;
+	opacity: 1;
+}
+.hm-user-support-rgt-des p{
+	font-size: 15px;
+	line-height: 25px;
+	padding-bottom: 18px;
+	opacity: 1;
+}
+.hm-user-support-rgt-des a{
+	font-size: 12px;
+	color: #fff;
+	padding-right: 24px;
+	text-transform: uppercase;
+	font-weight: 900;
+	position: relative;
+	opacity: 1;
+}
+.hm-user-support-rgt-des a::after{
+	content: "";
+	position: absolute;
+	top: 3px;
+	right: 0;
+	opacity: 1;
+	width: 17px;	
+	height: 12px;
+	background: url('../images/user-support-link-icon.png');
+	background-size: 100% 100%;
+	background-position: center center;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.hm-user-support-rgt-des a:hover{
+	opacity: .8;
+	padding-right: 30px;
+}
 .hm-explore-campaigns-sec{
-	padding: 108px 0 108px;
+	padding: 108px 0 130px;
 }
 .hm-explore-campaigns-innr ul{
 	margin-left: -8px;
@@ -233,20 +273,62 @@ span.hm-wc-social-assets-top-shape {
 	margin-bottom: 20px;
 }
 .hm-explore-campaigns-con{
-	min-height: 315px;
+	min-height: 315px;/* 
 	background-position: center center!important;
 	background-size: cover!important;
-	background-repeat: no-repeat!important;
+	background-repeat: no-repeat!important; */
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border-radius: 5px;
+	position: relative;
+	overflow: hidden;
 }
+.hm-explore-campaigns-con-bg{
+	background-position: center center!important;
+	background-size: cover!important;
+	background-repeat: no-repeat!important;
+	border-radius: 5px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 2;
+	-webkit-transition: all .5s ease;
+	-ms-transition: all .5s ease;
+	transition: all .5s ease;
+}
+.hm-explore-campaigns-con:hover .hm-explore-campaigns-con-bg{
+	-webkit-transform: scale(1.08);
+	-ms-transform: scale(1.08);
+	-o-transform: scale(1.08);
+	transform: scale(1.08);
+}
+
+.hm-explore-campaigns-link{
+	padding-top: 45px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 .hm-explore-campaigns-des{
 	max-width: 200px;
 	min-height: 105px;
 	text-align: center;
 	color: #fff;
+	position: relative;
+	z-index: 3;
 }
 .hm-explore-campaigns-des strong{
 	display: block;
@@ -261,7 +343,6 @@ span.hm-wc-social-assets-top-shape {
 	font-size: 13px;
 	font-weight: 700;
 }
-
 .hm-explore-campaigns-innr a.hm-explore-btn{
 	display: inline-block;
 	vertical-align: baseline;
@@ -293,10 +374,6 @@ span.hm-wc-social-assets-top-shape {
 .hm-explore-campaigns-innr a.hm-campaign-btn:hover{
 	color: #0055FF;
 }
-
-
-
-
 .hm-testimonials-sec{
 	background: #5BCBCA;
 	padding: 50px 0 135px;
@@ -304,6 +381,18 @@ span.hm-wc-social-assets-top-shape {
 .hm-testimonials-innr{
 	max-width: 825px;
 	margin: 0 auto;
+	position: relative;
+}
+.hm-testimonials-innr .hm-testimonials-icon {
+    position: absolute;
+    bottom: -111px;
+    right: -130px;
+    display: inline-block;
+    max-width: 285px;
+    z-index: 1;
+}
+.hm-testimonials-innr .hm-testimonials-icon img{
+	width: 100%;
 }
 .hm-testimonials-head {
 	padding-bottom: 28px;
@@ -316,8 +405,10 @@ span.hm-wc-social-assets-top-shape {
 	font-size: 16px;
 	line-height: 20px;
 }
-
-
+.hm-testimonials-slider{
+	position: relative;
+	z-index: 4;
+}
 .hm-testimonials-slider-item{
 	min-height: 315px;
 	padding: 80px 110px 42px 282px;
@@ -335,7 +426,6 @@ span.hm-wc-social-assets-top-shape {
 	height: 150px;
 	border-radius: 100%;
 }
-
 .hm-testimonials-slider-item p{
 	font-size: 15px;
 	line-height: 25px;
@@ -360,11 +450,6 @@ span.hm-wc-social-assets-top-shape {
 	font-weight: 700;
 	color: #177BE4;
 }
-
-
-
-
-
 .hm-partner-sec{
 	padding: 65px 0;
 	background: #F7F5F5;
@@ -376,9 +461,6 @@ span.hm-wc-social-assets-top-shape {
 	font-weight: 500;
 	margin-bottom: 15px;
 }
-
-
-
 .hm-testimonials-slider{
 	text-align: center;
 }
@@ -386,21 +468,10 @@ span.hm-wc-social-assets-top-shape {
 	width: 16.666%;
 	float: left;
 }
-
 .hm-testimonials-slider-item i{
 	display: inline-block;
 	vertical-align: baseline;
 }
-
-
-
-
-
-
-
-
-
-
 .hm-blog-sec{
 	padding: 112px 0 130px;
 }
@@ -466,7 +537,7 @@ span.hm-wc-social-assets-top-shape {
 }
 .hm-blog-grid-des{
 	font-family: 'Roboto Condensed', sans-serif;
-	padding: 30px 22px 20px 16px;
+	padding: 30px 22px 10px 16px;
 }
 .hm-blog-grid-des h6{
 	font-size: 15px;
@@ -500,25 +571,6 @@ span.hm-wc-social-assets-top-shape {
 	background: #fff;
 	color: #0055FF;
 }
-
-
-
-
-.wwd-user-section.hm-wwd-user-sec {
-    margin: 0!important;
-}
-.wwd-user-section.hm-wwd-user-sec .wwd-user-sec-inner {
-    padding: 0;
-    background: #fff;
-}
-.wwd-user-section.hm-wwd-user-sec .wwd-user-sec-rgt {
-    right: 32px;
-    bottom: 23px;
-    top: 27px;
-}
-
-
-
 .join-journey-section.hm-join-journey-sec{
 	margin-top: -152px;
 	padding-bottom: 50px;
@@ -548,13 +600,121 @@ span.hm-wc-social-assets-top-shape {
 
 
 
+.hm-banner-slider .slick-dots {
+    position: absolute;
+    bottom: initial;
+    display: block;
+    width: 30px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    left: auto;
+    right: 20px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.hm-banner-slider .slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 3px 10px;
+    padding: 0;
+    cursor: pointer;
+    float: initial;
+}
+.hm-banner-slider .slick-dots li button::before {
+    content: none;
+}
+.hm-banner-slider .slick-dots li button {
+    display: block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    cursor: pointer;
+    outline: none;
+    background: #0000;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.hm-banner-slider .slick-dots li button:hover {
+    background: #fff;
+}
+.hm-banner-slider .slick-dots li.slick-active button {
+    background: #fff;
+}
+
+.hm-banner-slider.slick-dotted{
+    margin-bottom: 0!important;
+}
+
+.hm-bnr-scroll{
+	display: inline-block;
+	position: absolute;
+	bottom: 35px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
+	z-index: 25;
+	max-width: 27px;
+}
+.hm-bnr-scroll img{
+	width: 100%;
+}
 
 
 
 
+.dft-slider-dot-con .slick-dots {
+    position: absolute;
+    bottom: -90px;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+}
+.dft-slider-dot-con .slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 3px 10px;
+    padding: 0;
+    cursor: pointer;
+    float: initial;
+}
+.dft-slider-dot-con .slick-dots li button::before {
+    content: none;
+}
+.dft-slider-dot-con .slick-dots li button {
+    display: block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    cursor: pointer;
+    outline: none;
+    background: #0000;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.dft-slider-dot-con .slick-dots li button:hover {
+    background: #fff;
+}
+.dft-slider-dot-con .slick-dots li.slick-active button {
+    background: #fff;
+}
 
-
-
-
-
-
+.hm-partner-slider.dft-slider-dot-con .slick-dots {
+    bottom: -30px;
+}
