--- a/themes/socialasset/assets/css/_about-us.css
+++ b/themes/socialasset/assets/css/_about-us.css
@@ -77,7 +77,7 @@
 }
 .core-value-sec{
   background: #0055FF;
-  padding: 95px 0 132px;
+  padding: 95px 0 100px;
   position: relative;
   overflow: hidden;
 }
@@ -92,6 +92,7 @@
 .core-value-col-innr{
   max-width: 265px;
   margin: auto;
+  margin-bottom: 30px;
 }
 .core-value-col-innr i{
   display: inline-block;
@@ -136,11 +137,7 @@
 .abt-social-asset-lft{
   width: 41.6%;
   float: left;
-  padding-left: 18px;
-  padding-right: 112px;
-  padding-top: 20px;
   padding: 20px 112px 0 18px;
-
 }
 .abt-social-asset-lft h4{
   color: #000;
@@ -234,6 +231,149 @@
 
 
 
+@media(max-width: 1499px){
+
+}
+
+@media(max-width: 1399px){
+
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 1199px){
+  .core-value-lft-btm-bg {
+    display: none;
+  }
+  .core-value-sec {
+    padding: 70px 0;
+  }
+  .core-value-head {
+    padding-bottom: 50px;
+  }
+  .abt-social-asset-lft {
+    width: 45%;
+    padding: 20px 30px 0 18px;
+  }
+  .abt-social-asset-rgt {
+    width: 55%;
+    float: left;
+  }
+
+}
+
+@media(max-width: 991px){
+  .about-story-des {
+    padding-top: 50px;
+    padding-bottom: 200px;
+  }
+  .about-story-bg-3 .about-story-bg-3-main {
+    width: 60%;
+  }
+  .about-story-bg-3 .about-story-bg-logo {
+    width: 100%;
+    float: left;
+    text-align: center;
+    padding: 20px 10px 20px;
+  }
+  .abt-social-asset-lft {
+    width: 100%;
+    padding: 20px 0;
+  }
+  .abt-social-asset-rgt {
+    width: 100%;
+  }
+  .abt-social-asset-sec {
+    padding: 100px 0 185px;
+  }
+}
+
+@media(max-width: 767px){
+  .about-story-bg-2 {
+    margin-top: 0;
+  }
+  .about-story-bg-2-main {
+    width: 80%;
+    min-height: 252px;
+    margin-right: auto;
+    border: none;
+    margin-bottom: 25px!important;
+  }
+  .about-story-bg-3 {
+    margin-top: 0;
+  }
+  .about-story-bg-3 .about-story-bg-3-main {
+    width: 80%;
+    margin: 0 auto;
+    float: none;
+    border: none;
+    margin-bottom: 25px!important;
+  }
+  .about-story-bg-3 .about-story-bg-logo {
+    float: none;
+  }
+
+  .about-story-bg-1-main {
+    width: 88%;
+    margin-bottom: 25px!important;    
+  }
+  .abt-social-asset-sec {
+    padding: 50px 0 150px;
+  }
+  .about-story-bg {
+    padding-bottom: 40px;
+  }   
+  .about-story-des-main p {
+    font-size: 18px;
+    line-height: 27px;
+    color: #000;
+    margin-bottom: 15px;
+  }
+}
+
+@media(max-width: 575px){
+  .about-story-des {
+    background: #F4F5F9;
+    min-height: initial;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .about-story-bg-main {
+    max-width: 980px;
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+  .about-story-bg-1-main,
+  .about-story-bg-2-main,
+  .about-story-bg-3 .about-story-bg-3-main {
+    width: 100%;
+    margin-bottom: 25px!important;
+  }
+
+}
+
+@media(max-width: 479px){
+  .abt-social-asset-rgt li i {
+    position: relative;
+    left: initial;
+    top: initial;
+    padding-top: 20px;
+    transform: initial;
+    margin-bottom: 12px;
+  }
+  .abt-social-asset-rgt li {
+    position: relative;
+    padding: 0 20px 20px;
+    text-align: center;
+    min-height: initial;
+  }
+}
+
+@media(max-width: 359px){
+
+}
 
 
 
