--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -35,7 +35,7 @@
 }
 .hm-banner-design-1 .hm-banner-slider-item-innr{
 	padding-top: 222px;
-	padding-bottom: 50px;
+	padding-bottom: 120px;
 	max-width: 950px;
 	position: relative;
 	z-index: 4
@@ -95,11 +95,9 @@
 	background: #fff;
 	color: #0055FF;
 }
-
-
 .hm-banner-design-2 .hm-banner-slider-item-innr{
 	padding-top: 322px;
-	padding-bottom: 50px;
+	padding-bottom: 120px;
 	max-width: 800px;
 	margin: 0 auto;
 	text-align: center;
@@ -107,17 +105,13 @@
 	position: relative;
 	z-index: 4
 }
- /* 'NeutrafaceTextBold' font face add korci, push kora ache */
-
 .hm-banner-design-2 h2{
 	/* font-family: "NeutrafaceTextBold"; */
 	margin-bottom: 38px;
 	text-transform: uppercase;
 	font-weight: 700;
 	line-height: 56px;
-
 }
-
 .hm-banner-design-2 a{
 	display: inline-block;
 	vertical-align: baseline;
@@ -135,18 +129,14 @@
 	background: #fff;
 	color: #0055FF;
 }
-
-
 .hm-wc-social-assets-sec{
 }
-
 .hm-wc-social-assets-top {
 	background: #F4F5F9;
 	padding-top: 80px;
 	padding-bottom: 122px;
 	position: relative;
 }
-
 .hm-wc-social-assets-top-innr{
 	max-width: 805px;
 	margin: 0 auto;
@@ -254,7 +244,6 @@ span.hm-wc-social-assets-top-shape {
 	background: url('../images/user-support-link-icon.png');
 	background-size: 100% 100%;
 	background-position: center center;
-
 }
 .hm-user-support-rgt-des a:hover{
 	opacity: .8;
@@ -266,7 +255,6 @@ span.hm-wc-social-assets-top-shape {
 .hm-explore-campaigns-innr ul{
 	margin-left: -8px;
 	margin-right: -8px;
-
 }
 .hm-explore-campaigns-innr ul li{
 	float: left;
@@ -276,10 +264,7 @@ span.hm-wc-social-assets-top-shape {
 	margin-bottom: 20px;
 }
 .hm-explore-campaigns-con{
-	min-height: 315px;/* 
-	background-position: center center!important;
-	background-size: cover!important;
-	background-repeat: no-repeat!important; */
+	min-height: 315px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -308,23 +293,9 @@ span.hm-wc-social-assets-top-shape {
 	-o-transform: scale(1.08);
 	transform: scale(1.08);
 }
-
 .hm-explore-campaigns-link{
 	padding-top: 45px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 .hm-explore-campaigns-des{
 	max-width: 200px;
 	min-height: 105px;
@@ -380,6 +351,7 @@ span.hm-wc-social-assets-top-shape {
 .hm-testimonials-sec{
 	background: #5BCBCA;
 	padding: 50px 0 135px;
+	overflow: hidden;
 }
 .hm-testimonials-innr{
 	max-width: 825px;
@@ -439,9 +411,7 @@ span.hm-wc-social-assets-top-shape {
 	text-transform: uppercase;
 }
 span.top-q-icon{
-	max-width: 36px;	
-	font-size: 81px;
-	color: #0054FD;
+	max-width: 36px;
 	position: absolute;
 	display: inline-block;
 	top: 42px;
@@ -449,15 +419,11 @@ span.top-q-icon{
 }
 span.btm-q-icon{
 	max-width: 36px;
-	font-size: 81px;
-	color: #0054FD;
 	position: absolute;
 	display: inline-block;
 	bottom: 85px;
 	right: 50px;
 }
-
-
 .hm-testimonials-ftr {
 	padding-top: 22px;	
 }
@@ -519,7 +485,7 @@ span.btm-q-icon{
 	float: left;
 	padding-left: 14px;
 	padding-right: 14px;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 	position: relative;
 	z-index: 1;
 }
@@ -605,24 +571,6 @@ span.btm-q-icon{
 .join-journey-section.hm-join-journey-sec .jjsg-des-bottom {
     background: #0000;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .hm-banner-slider .slick-dots {
     position: absolute;
     bottom: initial;
@@ -676,7 +624,6 @@ span.btm-q-icon{
 .hm-banner-slider.slick-dotted{
     margin-bottom: 0!important;
 }
-
 .hm-bnr-scroll{
 	display: inline-block;
 	position: absolute;
@@ -691,10 +638,6 @@ span.btm-q-icon{
 .hm-bnr-scroll img{
 	width: 100%;
 }
-
-
-
-
 .dft-slider-dot-con .slick-dots {
     position: absolute;
     bottom: -90px;
@@ -739,5 +682,242 @@ span.btm-q-icon{
 }
 
 .hm-partner-slider.dft-slider-dot-con .slick-dots {
-    bottom: -30px;
+    bottom: -50px;
+}
+.hm-partner-slider .hm-partner-slider-item{
+	text-align: center;
+}
+.hm-partner-slider .hm-partner-slider-item i img{
+	display: inline-block!important;
+	vertical-align: middle!important;
+}
+
+
+
+
+
+
+
+
+@media(max-width: 1499px){
+
+}
+
+@media(max-width: 1399px){
+
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 1199px){
+	.hm-explore-campaigns-sec {
+	    padding: 70px 0;
+	}
+	.hm-testimonials-innr .hm-testimonials-icon {
+	    display: none;
+	}
+	.hm-banner-slider-item {
+	    min-height: 700px;
+	}
+	.hm-banner-design-2 .hm-banner-slider-item-innr {
+	    padding-top: 250px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-innr {
+	    padding-top: 100px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-rgt-des {
+	    padding: 90px 40px 0 20px;
+	}
+	.hm-banner-design-2 .hm-banner-slider-item-innr {
+	    padding-left: 40px;
+	    padding-right: 40px;
+	}
+	.hm-banner-slider-item span.hm-banner-slider-rb-icon{
+		display: none;
+	}
+	.hm-banner-slider .slick-dots {
+	    right: 12px;
+	}
+}
+
+@media(max-width: 991px){
+	.hm-user-support-rgt-des {
+	    position: static;
+	    max-width: initial;
+	    padding: 65px 40px 80px;
+	    text-align: center;
+	    margin-top: -30px;
+	    width: 85%;
+	    margin: auto;
+	    margin-top: -50px;
+	}
+	.hm-explore-campaigns-des strong {
+	    font-size: 28px;
+	    line-height: 35px;
+	    margin-bottom: 10px;
+	}
+	.hm-testimonials-sec {
+	    padding: 50px 0 80px;
+	}
+	.hm-testimonials-slider-item {
+	    min-height: initial;
+	    padding: 80px 81px 42px 231px;
+	}
+	span.top-q-icon {
+	    top: 37px;
+	    left: 206px;
+	}
+	span.btm-q-icon {
+	    bottom: 73px;
+	    right: 41px;
+	}
+	.dft-slider-dot-con .slick-dots {
+	    bottom: -45px;
+	}
+	.hm-blog-sec {
+	    padding: 80px 0;
+	}
+	.hm-user-support-sec {
+	    padding-bottom: 80px;
+	}
+	.hm-blog-grid-bg-main {
+	    min-height: 300px;
+	}
+	.hm-blog-grid-des {
+	    padding: 20px 12px 25px;
+	}
+	.hm-banner-design-2 .hm-banner-slider-item-innr {
+	    padding-top: 130px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-lft-bg {
+	    min-height: 330px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-rgt-des {
+	    padding: 4px 35px 0 20px;
+	}
+	.hm-banner-slider-item {
+	    min-height: 600px;
+	}
+}
+
+@media(max-width: 767px){
+	.hm-explore-campaigns-des strong {
+	    font-size: 25px;
+	    line-height: 30px;
+	}	
+	.hm-explore-campaigns-innr ul li {
+	    width: 50%;
+	}
+	.hm-explore-campaigns-con {
+	    min-height: 260px;
+	}
+	.hm-explore-campaigns-sec {
+	    padding: 50px 0;
+	}
+	.hm-explore-campaigns-link {
+	    padding-top: 15px;
+	}
+	.hm-partner-head {
+	    padding-bottom: 20px;
+	}
+	.hm-partner-sec {
+	    padding: 50px 0;
+	    background: #F7F5F5;
+	}
+	.hm-blog-sec {
+	    padding: 50px 0;
+	}
+	.hm-user-support-sec {
+	    padding-bottom: 50px;
+	}
+	.hm-wc-social-assets-top {
+	    padding-top: 50px;
+	}
+	.hm-blog-grid-bg-main {
+	    min-height: 250px;
+	}
+	.hm-blog-grid-item:nth-child(3n+1) {
+	    clear: initial;
+	}
+	.hm-blog-grid-item:nth-child(2n+1) {
+	    clear: left;
+	}
+	.hm-blog-grid-item {
+	    width: 50%;
+	}
+	.hm-wc-social-assets-top p strong {
+	    font-size: 20px;
+	    line-height: 26px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-lft-bg {
+	    width: 60%;
+	    min-height: 280px;
+	    float: none;
+	    margin: auto;
+	    margin-bottom: 20px;
+	}
+	.hm-banner-design-1 .hm-banner-slider-item-rgt-des {
+	    width: 100%;
+	    float: left;
+	    padding: 25px 0 20px;
+	    max-width: 650px;
+	    float: none;
+	    margin: auto;
+	}
+
+}
+@media(max-width: 639px){
+	.hm-testimonials-sec {
+	    padding: 50px 0;
+	}
+	.hm-testimonials-slider-item i {
+	    position: static;
+	    margin-bottom: 20px;
+	}
+	.hm-testimonials-slider-item {
+	    min-height: initial;
+	    padding: 50px 30px;
+	}
+	span.top-q-icon,
+	span.btm-q-icon {
+	    display: none;
+	}
+	.hm-testimonials-ftr {
+	    padding-top: 5px;
+	}
+
+}
+
+@media(max-width: 575px){
+	.hm-explore-campaigns-innr ul li {
+	    width: 100%!important;
+	}
+	.hm-explore-campaigns-innr a.hm-explore-btn {
+	    padding: 12px 25px;
+	    margin-bottom: 13px;
+	}
+	.hm-user-support-rgt-des {
+	    padding: 25px 15px 40px;
+	    width: 95%;
+	}
+	.hm-blog-grid-item:nth-child(2n+1) {
+	    clear: initial;
+	}
+	.hm-blog-grid-item {
+	    width: 100%;
+		max-width: 370px;
+	    margin: 0 auto 25px;
+	    float: none;
+	}
+}
+
+@media(max-width: 479px){
+
+
+}
+
+@media(max-width: 359px){
+
 }
