--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1156,3 +1156,204 @@ span.status-published-title.color-red{
 	max-width: 425px;
 	width: 100%;
 }
+.ngo-create-campaign-con-des-hdr{
+	padding-bottom: 55px;
+}
+.ngo-create-campaign-con-des-hdr p{
+	margin-bottom: 0;
+	font-size: 19px;
+	line-height: 21px;
+}
+
+.ncc-input-title-fields-row input[type="text"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-input-title-fields-row input[type="text"]::-moz-placeholder { /* Firefox 19+ */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-input-title-fields-row input[type="text"]:-ms-input-placeholder { /* IE 10+ */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-input-title-fields-row input[type="text"]:-moz-placeholder { /* Firefox 18- */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-input-fields-row{
+	padding-bottom: 30px;
+}
+
+.ncc-input-fields-row .sa-selctpicker-ctlr .btn.dropdown-toggle{
+	height: 50px;
+	font-size: 13px;
+	box-shadow: none;
+	text-transform: capitalize;
+}
+.ncc-input-fields-row .sa-selctpicker-ctlr{
+	padding-bottom: 0;
+}
+.ncc-input-fields-row-col{
+	margin: 0 -13px;
+}
+.ncc-input-fields-col{
+	float: left;
+	width: 50%;
+	padding: 0 13px;
+}
+
+.date-field{
+	height: 51px;
+	background: #fff;
+	border-radius: 5px;
+	position: relative;
+	padding: 0 0 0 59px;
+
+}
+.ncc-input-fields-row-col > label{
+	padding-left: 13px;
+}
+
+.date-input img{
+	position: absolute;
+	right: 15px;
+	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+}
+.date-input input{
+	width: 100%;
+	font-size: 15px;
+	color: #5F5F5F;
+
+}
+.ncc-input-fields-row label{
+	margin-bottom: 0;
+	padding-right: 25px;
+}
+.date-input{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	height: 100%;
+}
+.date-field label{
+	position: absolute;
+	left: 11px;
+	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);	
+}
+.ngo-upload-cover-photo-inr{
+	min-height: 50px;
+	background: #fff;
+	-webkit-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    -moz-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    width: 100%;
+    border-radius: 5px;
+    position: relative;
+    padding:5px 20px;
+}
+.ngo-upload-cover-photo-inr input[type="file"]{
+	height: 100%;
+	opacity: 0;
+	width: 100%;
+	background: transparent;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border-radius: 5px;
+	z-index: 5;
+}
+.ngo-upload-cover-photo-inr span{
+	position: absolute;
+	top: 50%;
+		transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);	
+	left: 23px;
+	font-size: 13px;
+	line-height: 15px;
+	font-weight: 700;
+}
+.ngo-upload-cover-photo-inr i{
+	position: absolute;
+	top: 50%;
+		transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	right: 20px;	
+}
+.ncc-campaign-gallery{
+	padding: 20px 0 0;
+}
+.ncc-campaign-gallery label{
+	display: block;
+	font-size: 13px;
+	font-style: italic;
+	color: #5F5F5F;
+	margin-bottom: 18px;
+}
+.ncc-campaign-gallery label strong{
+	font-weight: 700;
+	font-style: normal;
+}
+
+.ncc-campaign-gallery-add-img{
+	background: #FFFFFF;
+	border-radius: 6px;
+	-webkit-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    -moz-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    width: 100px;
+    height: 100px;	
+    position: relative;
+}
+.ncc-campaign-gallery-add-img input[type="file"]{
+	height: 100%;
+	opacity: 0;
+	width: 100%;
+	background: transparent;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border-radius: 5px;
+	z-index: 5;
+}
+.ncc-campaign-gallery-add-img i{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+}
+.ncc-campaign-gallery-list{
+	padding-bottom: 30px;
+}
+.ncc-campaign-gallery-list ul li{
+	display: inline-block;
+	vertical-align: baseline;
+	padding: 0 20px 10px 0;
+}
+.pr-190{
+	padding-right: 190px;
+}
+
+.ncc-text-editor > label{
+	font-size: 13px;
+	line-height: 16px;
+	margin-bottom: 10px;
+}
