--- a/themes/socialasset/assets/css/_about-us.css
+++ b/themes/socialasset/assets/css/_about-us.css
@@ -3,13 +3,12 @@
   min-height: 495px;
   padding-top: 88px;
   padding-bottom: 220px;
-}
+} 
 .about-story-des-main{
   max-width: 800px;
   margin: 0 auto;
 }
-.about-story-des-main h4{
-  font-size: 32px;
+.about-story-des-main h3{
   font-weight: 700;
   color: #0055FF;
   margin-bottom: 30px;
@@ -288,6 +287,9 @@
   .abt-social-asset-sec {
     padding: 100px 0 185px;
   }
+  .core-value-head h2 {
+    font-size: 40px;
+  }
 }
 
 @media(max-width: 767px){
@@ -319,16 +321,18 @@
     margin-bottom: 25px!important;    
   }
   .abt-social-asset-sec {
-    padding: 50px 0 150px;
+    padding: 50px 0 100px;
   }
   .about-story-bg {
     padding-bottom: 40px;
   }   
   .about-story-des-main p {
     font-size: 18px;
-    line-height: 27px;
-    color: #000;
+    line-height: 25px;
     margin-bottom: 15px;
+  }
+  .core-value-head h2 {
+    font-size: 36px;
   }
 }
 
@@ -350,7 +354,15 @@
     width: 100%;
     margin-bottom: 25px!important;
   }
-
+  .about-story-des-main h3{
+    margin-bottom: 22px;
+  }
+  .core-value-head h2 {
+    font-size: 32px;
+  }
+  .abt-social-asset-lft p {
+    margin-bottom: 20px;
+  }
 }
 
 @media(max-width: 479px){
@@ -364,7 +376,7 @@
   }
   .abt-social-asset-rgt li {
     position: relative;
-    padding: 0 20px 20px;
+    padding: 0 10px 20px;
     text-align: center;
     min-height: initial;
   }
