--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1351,9 +1351,83 @@ span.status-published-title.color-red{
 .pr-190{
 	padding-right: 190px;
 }
-
-.ncc-text-editor > label{
+.ncc-text-editor{
+	padding-bottom: 40px;
+}
+.ncc-text-editor > label,
+.ncc-add-tag > label,
+.ncc-input-fields-row > label{
 	font-size: 13px;
 	line-height: 16px;
 	margin-bottom: 10px;
+	color: #5F5F5F;
+}
+
+.ncc-add-tag input[type="text"]{
+	width: 100%;
+	min-height: 50px;
+	border-radius: 5px;
+	background: #fff;
+	border: none;
+	padding: 5px 23px;
+	color: #818181;
+	font-size: 13px;
+}
+
+.ncc-add-tag input[type="text"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-add-tag input[type="text"]::-moz-placeholder { /* Firefox 19+ */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-add-tag input[type="text"]:-ms-input-placeholder { /* IE 10+ */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-add-tag input[type="text"]:-moz-placeholder { /* Firefox 18- */
+  opacity: 1;
+  color: #818181;
+  font-style: italic;
+}
+.ncc-add-tag{
+	padding-bottom: 65px;
+}
+
+.ncc-submit-btns{
+	text-align: right;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.ncc-submit-btns button{
+	width: 130px;
+	height: 52px;
+	font-size: 12px;
+	font-weight: 700;
+	text-align: center;
+	border-radius: 5px;
+	border: 1px solid #B1B1B1;
+	background: transparent;
+	color: #868686;
+	margin-right: 22px;
+	cursor: pointer;
+}
+.ncc-submit-btns input[type="submit"]{
+	width: 195px;
+	height: 52px;
+	font-size: 14px;
+	font-weight: 900;
+	text-align: center;
+	border-radius: 5px;
+	border: none;
+	background: #0055FF;
+	color: #fff;
+	margin-right: 22px;	
+	cursor: pointer;
 }
