--- a/themes/socialasset/assets/css/_page.css
+++ b/themes/socialasset/assets/css/_page.css
@@ -26,3 +26,7 @@ box-shadow: 0px 14px 23px 0px rgba(227,228,232,1);
 	font-size: 19px;
 	line-height: 22px;
 }
+
+.modal-login-form .fl-submit-btn input[type="submit"]{
+	border-radius: 28px;
+}
