--- a/themes/socialasset/assets/css/_what-we-do.css
+++ b/themes/socialasset/assets/css/_what-we-do.css
@@ -114,7 +114,7 @@
 	transform: translate(-50%,-50%);
 	width: 134px;
 	height: 134px;
-	background: #0055FF;
+	background: rgba(0,85,255,0.85);
 	border-radius: 100%;
 	display: flex;
 	align-items: center;
@@ -122,13 +122,14 @@
 }
 .jjsg-des h3{
 	margin: 0;
-	padding-bottom: 30px;
+	padding-bottom: 18px;
 	line-height: 47px;
 	font-weight: 500;
 }
 .jjsg-des p{
 	font-size: 15px;
 	line-height: 25px;
+	padding-bottom: 10px;
 }
 
 
@@ -153,7 +154,7 @@
 	right: 38px;
     bottom: 23px;
     top: 27px;
-	background: #0055FF;
+	background: rgba(0,85,255,0.99);
 	max-width: 400px;
 	width: 100%;
 }
@@ -328,7 +329,7 @@
 	    min-height: 400px;
 	}
 	.jjsg-des h3 {
-	    padding-bottom: 18px;
+	    padding-bottom: 6px;
 	}
 	.wwd-user-sec-img {
 	    min-height: 275px;
